@@ -1,0 +1,16 @@
+<!DOCTYPE html>
+<html>
+    <title>JFocus -petergo7</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:ital,wght@1,700;400;200">
+    <link rel="stylesheet" type = "text/css" href="CSS/cssMain.css">
+    <body class = "flexBody">
+        <article class = "flexArticle">
+            <h1>
+                JFocus File Viewing Page
+            </h1>
+        </article>
+    </body>
+    <script>
+        
+    </script>
+</html>
