@@ -13,8 +13,8 @@
                 Click a button below to be taken to that project/file showcase.
             </p>
             <div class = "flexArticleInverse">
-                <a href = "JFocus/JFocus3.html" class = "sourceCodeEmoji centerObj">
-                    Javascript Focus 3 🛠️
+                <a href = "main.html" class = "sourceCodeEmoji centerObj">
+                    JFocus Universal Viewer (Under Construction, Priority)
                     <p class = "postletter">(This button's href changes)</p>
                 </a>
                 <a href = "changeLog.html" class = "sourceCodeEmoji centerObj">
@@ -48,7 +48,7 @@
                 Dismiss
             </button>
             <h2 class = "centerTxt customAlertHeading">Alerts</h2>
-            <p class = "alertTxt" id = "maintinenceAlert">Alert: No Alerts</p>
+            <p class = "alertTxt" id = "maintinenceAlert">Alert: Webpage will be under maintinence due to JFocus files being unable to be viewed after a certian amount of time. The next update (PU15) should fix it. The ISS Live Telemetry Data Viewer will be temporarily paused.</p>
         </div>
     </footer>
 </html>
